--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "angular2",
-  "version": "0.0.0",
-  "license": "MIT",
-  "angular-cli": {},
+  "name": "project-setup",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "start": "ng serve",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "typings install",
-    "lint": "tslint \"src/**/*.ts\"",
-    "test": "ng test",
-    "pree2e": "webdriver-manager update",
-    "e2e": "protractor",
-    "typings": "typings"
+    "typings": "typings",
+    "lite": "lite-server",
+    "build:vendor": "gulp vendor",
+    "build:dev": "gulp clean && gulp vendor && gulp build",
+    "build:dev.watch": "gulp clean && gulp vendor && gulp",
+    "build:production": "gulp clean && gulp vendor && gulp build --production && node systemjs.builder.js"
   },
-  "private": true,
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@angular/common": "2.0.0-rc.1",
     "@angular/compiler": "2.0.0-rc.1",
@@ -20,27 +22,27 @@
     "@angular/http": "2.0.0-rc.1",
     "@angular/platform-browser": "2.0.0-rc.1",
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "3.0.0-alpha.3",
-    "es6-shim": "0.35.1",
-    "reflect-metadata": "0.1.3",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    "es6-shim": "^0.35.0",
+    "ng2-bootstrap": "^1.0.17",
+    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.26",
-    "zone.js": "0.6.12"
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.6",
-    "codelyzer": "0.0.20",
-    "ember-cli-inject-live-reload": "1.4.0",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-jasmine": "0.3.8",
-    "node-sass": "^3.8.0",
-    "protractor": "3.3.0",
-    "ts-node": "0.5.5",
-    "tslint": "3.11.0",
-    "typescript": "1.8.10",
-    "typings": "0.8.1"
+    "codelyzer": "0.0.22",
+    "concurrently": "^2.1.0",
+    "del": "^2.2.0",
+    "gulp": "^3.9.1",
+    "gulp-if": "^2.0.1",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.6",
+    "lite-server": "^2.2.0",
+    "systemjs-builder": "^0.15.19",
+    "tslint": "^3.10.2",
+    "typings": "^1.0.4",
+    "yargs": "^4.7.1"
   }
 }
