--- a/package.json
+++ b/package.json
@@ -1,48 +1,51 @@
 {
-  "name": "project-setup",
+  "name": "angular2-quickstart",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && concurrently \"npm run tsc:w\" \"npm run lite\" ",
+    "lite": "lite-server",
     "postinstall": "typings install",
+    "tsc": "tsc",
+    "tsc:w": "tsc -w",
     "typings": "typings",
     "lite": "lite-server",
-    "build:vendor": "gulp vendor",
-    "build:dev": "gulp clean && gulp vendor && gulp build",
-    "build:dev.watch": "gulp clean && gulp vendor && gulp",
-    "build:production": "gulp clean && gulp vendor && gulp build --production && node systemjs.builder.js"
+    "build:vendor" : "gulp vendor",
+    "build:dev" : "gulp clean && gulp vendor && gulp build",
+    "build:dev.watch" : "gulp clean && gulp vendor && gulp"
+
   },
-  "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
-    "@angular/upgrade": "2.0.0-rc.1",
-    "es6-shim": "^0.35.0",
-    "ng2-bootstrap": "^1.0.17",
+    "@angular/common": "2.0.0-rc.3",
+    "@angular/compiler": "2.0.0-rc.3",
+    "@angular/core": "2.0.0-rc.3",
+    "@angular/forms": "0.1.1",
+    "@angular/http": "2.0.0-rc.3",
+    "@angular/platform-browser": "2.0.0-rc.3",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.3",
+    "@angular/router": "3.0.0-alpha.7",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.3",
+    "systemjs": "0.19.27",
+    "core-js": "^2.4.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "0.19.27",
-    "zone.js": "^0.6.12"
+    "zone.js": "^0.6.12",
+    "angular2-in-memory-web-api": "0.0.12",
+    "bootstrap": "^3.3.6"
   },
   "devDependencies": {
-    "@angular/router-deprecated": "^2.0.0-rc.2",
-    "codelyzer": "0.0.22",
-    "concurrently": "^2.1.0",
-    "del": "^2.2.0",
+    "codelyzer": "0.0.23",
+    "concurrently": "^2.0.0",
+    "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-if": "^2.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "lite-server": "^2.2.0",
-    "systemjs-builder": "^0.15.19",
-    "tslint": "^3.10.2",
+    "systemjs-builder": "^0.15.23",
+    "tslint": "^3.11.0",
+    "typescript": "^1.8.10",
     "typings": "^1.0.4",
     "yargs": "^4.7.1"
   }
