--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,16 +3,10 @@
     "target": "es5",
     "module": "commonjs",
     "moduleResolution": "node",
+    "sourceMap": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
     "noImplicitAny": false
-  },
-  "files": [
-    "./src/app/main.ts",
-    "typings.d.ts"
-  ],
-  "atom": {
-    "rewriteTsconfig": true
   }
 }
