--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "typings": "typings",
-    "lite": "lite-server",
-    "build:vendor" : "gulp vendor",
-    "build:dev" : "gulp clean && gulp vendor && gulp build",
-    "build:dev.watch" : "gulp clean && gulp vendor && gulp"
-
+    "build:vendor": "gulp vendor",
+    "build:dev": "gulp clean && gulp vendor && gulp build",
+    "build:dev.watch": "gulp clean && gulp vendor && gulp",
+    "test": "gulp test"
   },
   "license": "ISC",
   "dependencies": {
@@ -42,11 +41,18 @@
     "gulp-if": "^2.0.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
+    "jasmine": "^2.4.1",
+    "karma": "^1.0.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-phantomjs-launcher": "^1.0.1",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.7.0",
     "lite-server": "^2.2.0",
     "systemjs-builder": "^0.15.23",
     "tslint": "^3.11.0",
     "typescript": "^1.8.10",
     "typings": "^1.0.4",
+    "webpack": "^1.13.1",
     "yargs": "^4.7.1"
   }
 }
